--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # --- JPA Config ---
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
@@ -18,4 +19,4 @@ spring.session.store-type=jdbc
 spring.sql.init.mode=always
 spring.session.jdbc.initialize-schema=always
 
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
